--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"sqlite3": "^4.0.6",
-		"express": "^4.16.4",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
 		"serve-index": "^1.9.1",
-		"cors": "^2.8.5"
+		"sqlite3": "^4.1.0"
 	}
 }
